Fixing Issue #3681
Move arrows don't align on all themes

--- a/include/themes/paper-plane/main.css
+++ b/include/themes/paper-plane/main.css
@@ -1813,6 +1813,8 @@ tr>td.textInfo.right {
 .moveArrow {
 	color: #00438C !important;
 	height: 14px !important;
+	display: inline-block;
+	width: 11.75px;
 	font-size: 14px !important;
 	vertical-align: middle;
 	text-decoration: none !important;
@@ -1823,7 +1825,8 @@ tr>td.textInfo.right {
 }
 
 .moveArrowNone {
-	padding-left: 8.75px;
+	display: inline-block;
+	width: 11.75px;
 }
 
 .action, .shiftArrow, .calendar {
